--- a/_config.yml
+++ b/_config.yml
@@ -74,8 +74,7 @@ netease_comment: false
 # Google Analytics
 # ga_track_id: 'UA-49627206-1'            # Format: UA-xxxxxx-xx
 # ga_domain: huangxuan.me
-# gsv: ''
-
+gsv: 'HUq9zIqmlLMHO-Ns9tEu6drasagknezrT2z0ispbmA8'
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
